[package]
name = "rss-combine"
version = "0.1.0"
authors = ["Olav Vitters <olav@vitters.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tempfile-fast = "0.3"
rss = "1.9.0"
#rss = { version = "1.9.0", features = ["from_url"] }


